@@ -14,6 +14,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.11.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    
     <build>
         <plugins>
             <plugin>
@@ -28,6 +37,19 @@
                         <arg>--add-modules=jdk.incubator.vector</arg>
                         <arg>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</arg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <version>3.5.0</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>**/**.java</include>
+                    </includes>
+                    <argLine>
+                        --add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
